päivitetty java11 sopivaksi